<resources>
    <string name="app_name">SmartBabyCare</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>


    <string name="title_activity_smart_baby">SmartBaby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submission_successful">Success</string>

    <string name="menu_about">About</string>
    <string name="menu_profile">Profile</string>
    <string name="name">Name</string>
    <string name="prompt_email">Prompt Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="prompt_password">Prompt Password</string>
    <string name="register">Register</string>
    <string name="vaccine_schedule">Vaccine Schedule</string>
    <string name="cancel">Cancel</string>
    <string name="at_birth">At Birth</string>
    <string name="description">Description</string>
    <string name="bcg">BCG</string>
    <string name="hep_b1">Help B1</string>
    <string name="opv_0">OPV 0</string>
    <string name="_6_weeks">6 Weeks</string>
    <string name="dtp1">DTP1</string>
    <string name="hib_1">HIB 1</string>
    <string name="hep_b2">HEB B2</string>
    <string name="opv1">OPV1</string>
    <string name="dtwp_1">DTWP_1</string>
</resources>