<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartbabycare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addingChildFragment"
            app:destination="@id/addingChildFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smartbabycare.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smartbabycare.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addingChildFragment"
        android:name="com.example.smartbabycare.addingChild.AddingChildFragment"
        android:label="fragment_adding_child"
        tools:layout="@layout/fragment_adding_child" />
    <fragment
        android:id="@+id/nav_profile2"
        android:name="com.example.smartbabycare.ui.profile.nav_profile"
        android:label="fragment_nav_profile"
        tools:layout="@layout/fragment_nav_profile" />
    <fragment
        android:id="@+id/nav_share2"
        android:name="com.example.smartbabycare.ui.share.ShareFragment"
        android:label="fragment_nav_share"
        tools:layout="@layout/fragment_nav_share" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.smartbabycare.ui.settings.SettingsFragment"
        android:label="fragment_nav_settings"
        tools:layout="@layout/fragment_nav_settings" />
</navigation>