<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Card_View="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ParentDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:padding="16dp"
            android:scrollbarThumbVertical="@null">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"

                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <EditText
                            android:id="@+id/et_Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/name"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:paddingLeft="5dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/etPhone_Number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/phone_number"
                            android:maxLength="12"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:paddingLeft="5dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/etDoB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/prompt_password"
                            android:inputType="date"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/button_gradient"
                        android:text="@string/register"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"/>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </ScrollView>
    </RelativeLayout>


    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_background"
        android:padding="15dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/profile" />
</RelativeLayout>